Github release workflow added