@@ -230,6 +230,7 @@
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
+                    <arguments>--enable-preview</arguments>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
